# vibe-wallpaper

./: .gitignore  Cargo.toml  README.md  architecture_v2.md
cli/: Cargo.toml
cli/src/: main.rs  test_composite.rs  test_rgb.rs
core/: Cargo.toml
core/src/: compositor.rs  config.rs  ipc.rs  lib.rs  scheduler.rs
core/src/desktop/: mod.rs  portal.rs
core/src/providers/: mod.rs  quote.rs  wallpaper.rs
daemon/: Cargo.toml  vibe.service
daemon/src/: main.rs
gui/: index.html  package-lock.json
gui/src/: main.ts  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs
